# nautobot_zero_to_hero

./: .gitignore  CHANGELOG.md  CONFIG_CONTEXT_SUMMARY.md  INSTALLATION.md  Makefile  NAPALM_TROUBLESHOOTING.md  NAUTOBOT_INTEGRATION.md  PROVISIONING_SUMMARY.md  README.md  README_LAB_SETUP.md  README_task.md  Taskfile.yml  configure_ssh_handler.sh  docker-compose.override.amd64.yml  docker-compose.yml  fix_nokia_srl.sh  get_config.sh  install.sh  install_task.sh  nautobot_advanced_settings.md  nautobot_settings.md  pyproject.toml  start_desktop.sh  test_jobs.md  update_hosts.sh
config/: nautobot_config.py
containerlab/: README.md  access1_config.txt  configure_devices.sh  configure_network_access.sh  nautobot-lab.clab.yml  nautobot-lab.clab.yml.annotations.json  quick_access.sh  validate_lab.sh
docs/: AUTOMATION_JOURNEY.md  AUTO_PROVISIONING_HOOK.md  CONFIG_CONTEXTS.md  CONFIG_CONTEXT_SUMMARY.md  CONNECTIVITY_FIX_TUTORIAL.md  DESKTOP.md  DEVICE_PROVISIONING.md  GRAPHQL_QUERY_SETUP.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  INTERFACE_HOOK.md  JOB_BUTTON_SETUP.md  NETWORK_CONNECTIVITY_SETUP.md  PROVISIONING_ARCHITECTURE.md  PROVISIONING_QUICKSTART.md  QUICK_REFERENCE.md  SETUP_DEVICE_HOOK.md  SITE_DEPLOYMENT.md  SITE_DEPLOYMENT_SUMMARY.md  VLAN_CONFIGURATION.md
jobs/: requirements.txt
media/: .gitkeep
scripts/: 1_config_hostname.py  2_config_interface.py  3_config_arista.py  4_config_arista_template.py  4a_diagnose_connectivity_issue.py  4b_config_arista_template_fix.py  5_config_arista_nautobot_inventory.py  5_config_arista_template_nautobot.py  README.md  (+4 more)
(+57 files in other folders)
